Polish GUI to wrap question text, solve submit button enable function and bind player prize data to GUI labels

--- a/src/main/resources/com/demo/gui/styles.css
+++ b/src/main/resources/com/demo/gui/styles.css
@@ -9,6 +9,14 @@
     -fx-alignment: center;
 }
 
+#questionLbl {
+    -fx-wrap-text: true;
+    -fx-min-height: -fx-computed-size;
+    -fx-pref-height: -fx-computed-size;
+    -fx-max-height: -fx-computed-size;
+    -fx-max-width: 590px;
+}
+
 .button {
     -fx-pref-width: 250px;
     -fx-font-family: "Arial Rounded MT Bold";
